--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,17 +7,16 @@ project(seeb VERSION 1.0.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-option(STATIC_LINK "Enable static linking" OFF)
-
-# Apply options only for Release mode
-if(CMAKE_BUILD_TYPE STREQUAL "Release")
-    message(STATUS "Configuring for Release mode: Enabling optimizations")
-    add_compile_options(-O3 -march=native -funroll-loops)
-endif()
-# Apply static linking if enabled
+set(JSON_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/external/json)
+option(STATIC_LINK "Enable static linking" ON)
 if(STATIC_LINK)
     message(STATUS "Static linking enabled")
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
+    # Ensure static runtime linking on Windows
+    if (WIN32)
+        set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+    else()
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
+    endif()
 endif()
 
 set(COMPANY "None")
