modified:   .vscode/c_cpp_properties.json 	new file:   .vscode/settings.json 	modified:   CMakeLists.txt 	modified:   CMakePresets.json 	deleted:    external/deps.json 	new file:   hello-world/main.cpp 	new file:   hello-world/src/ano/ano.cpp 	new file:   hello-world/src/temp.cpp 	new file:   hello-world/util.cpp 	renamed:    external/json/json.hpp -> src/json.hpp 	renamed:    src/main.cxx -> src/main.cpp 	modified:   src/setting.hpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ configure_file(res/config.h.in seebconfig.h)
 
 #@find Warning: Do not remove this line
 
-file(GLOB SOURCES "src/*.cxx")
+file(GLOB SOURCES "src/*.cpp")
 add_executable(${PROJECT_NAME} ${SOURCES})
 
 install(TARGETS ${PROJECT_NAME} DESTINATION bin)
